# event-hub-cpp

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README-RU.md  README.md
.github/workflows/: ci.yml
agents/: README.md  build-and-test.md  codebase-orientation.md  commit-conventions.md  cpp-development-guidelines.md  dependencies.md  header-implementation-guidelines.md  modules-and-module-hub.md  project-structure.md  request-response-and-reply.md  security-and-scope.md  task-manager-and-run-loop.md
cmake/: event-hub-cpp.pc.in  event-hub-cppConfig.cmake.in
docs/: project-structure.md
examples/: await_and_cancel.cpp  basic.cpp  calendar_scheduler.cpp  calendar_scheduler_custom_time.cpp  calendar_scheduler_ntp.cpp  event_and_listener.cpp  event_node.cpp  exception_handling.cpp  external_notifier.cpp  module_hub.cpp  module_hub_background.cpp  module_hub_external_loop.cpp  request_response.cpp  run_loop.cpp  strict_lifetime.cpp  task_manager.cpp  task_manager_periodic.cpp  task_manager_with_bus.cpp
include/: event_hub.hpp
include/event_hub/: awaiter_interfaces.hpp  calendar_scheduler.hpp  cancellation.hpp  event.hpp  event_awaiter.hpp  event_bus.hpp  event_endpoint.hpp  event_listener.hpp  event_node.hpp  module.hpp  module_hub.hpp  notifier.hpp  request.hpp  run_loop.hpp  task.hpp  task_manager.hpp
include/event_hub/calendar_scheduler/: detail.hpp  types.hpp
tests/: smoke.cpp  test_calendar_scheduler.cpp  test_concurrent_producers.cpp  test_event_awaiters.cpp  test_event_bus_core.cpp  test_event_exceptions.cpp  test_event_nodes.cpp  test_event_notifications.cpp  test_event_reentrant.cpp  test_helpers.hpp  test_lifetime_guards.cpp  test_module_hub.cpp  test_request_response.cpp  test_run_loop_behavior.cpp  test_task_manager_core.cpp  test_task_manager_errors.cpp  test_task_manager_wait_helpers.cpp
tests/install_consumer/: CMakeLists.txt  calendar.cpp  main.cpp
vcpkg-overlay/ports/event-hub-cpp/: portfile.cmake  vcpkg.json
